Job updates through docker demon.